--- a/src/output.css
+++ b/src/output.css
@@ -794,10 +794,6 @@ video {
   overflow: hidden;
 }
 
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
@@ -828,6 +824,11 @@ video {
 .bg-customColorTagBackground {
   --tw-bg-opacity: 1;
   background-color: rgb(255 182 80 / var(--tw-bg-opacity));
+}
+
+.bg-customColorText {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 226 209 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -907,6 +908,11 @@ video {
   padding-right: 15rem;
 }
 
+.px-96 {
+  padding-left: 24rem;
+  padding-right: 24rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -927,11 +933,6 @@ video {
   padding-bottom: 24rem;
 }
 
-.px-96 {
-  padding-left: 24rem;
-  padding-right: 24rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -942,6 +943,10 @@ video {
 
 .text-justify {
   text-align: justify;
+}
+
+.text-end {
+  text-align: end;
 }
 
 .font-custom1 {
@@ -1001,6 +1006,10 @@ video {
   font-weight: 600;
 }
 
+.font-700 {
+  font-weight: 700;
+}
+
 .font-900 {
   font-weight: 900;
 }
@@ -1049,10 +1058,20 @@ video {
   color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
+.text-customColorTagBackground {
+  --tw-text-opacity: 1;
+  color: rgb(255 182 80 / var(--tw-text-opacity));
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.brightness-50 {
+  --tw-brightness: brightness(.5);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 /* Chrome, Edge and Safari */
