--- a/src/output.css
+++ b/src/output.css
@@ -570,10 +570,6 @@ video {
   position: relative;
 }
 
-.sticky {
-  position: sticky;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -588,46 +584,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.top-28 {
-  top: 7rem;
-}
-
-.top-\[-2\] {
-  top: -2;
-}
-
-.top-\[2\] {
-  top: 2;
-}
-
-.top-\[0\] {
-  top: 0;
-}
-
-.top-\[-10\] {
-  top: -10;
-}
-
-.top-\[10\] {
-  top: 10;
-}
-
-.top-\[-10px\] {
-  top: -10px;
-}
-
-.top-\[-2px\] {
-  top: -2px;
-}
-
-.top-\[-4px\] {
-  top: -4px;
-}
-
-.right-\[-4px\] {
-  right: -4px;
 }
 
 .-z-10 {
@@ -646,28 +602,12 @@ video {
   margin-bottom: 1rem;
 }
 
-.mb-96 {
-  margin-bottom: 24rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .mt-24 {
   margin-top: 6rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-96 {
-  margin-top: 24rem;
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .block {
@@ -690,21 +630,13 @@ video {
   height: 100vh;
 }
 
-.w-\[35\%\] {
-  width: 35%;
-}
-
-.w-full {
-  width: 100%;
+.w-screen {
+  width: 100vw;
 }
 
 .w-max {
   width: -moz-max-content;
   width: max-content;
-}
-
-.w-screen {
-  width: 100vw;
 }
 
 @keyframes jello {
@@ -759,17 +691,6 @@ video {
   animation: menuin 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 }
 
-@keyframes reveal {
-  0% {
-    opacity: 0;
-    transform: opacity(100%);
-  }
-}
-
-.animate-reveal {
-  animation: reveal 1s ease-in forwards;
-}
-
 .cursor-cell {
   cursor: cell;
 }
@@ -784,6 +705,10 @@ video {
 
 .grid-flow-row {
   grid-auto-flow: row;
+}
+
+.grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -806,20 +731,8 @@ video {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
-}
-
 .gap-1 {
   gap: 0.25rem;
-}
-
-.gap-12 {
-  gap: 3rem;
 }
 
 .gap-16 {
@@ -834,10 +747,6 @@ video {
   gap: 1rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-8 {
   gap: 2rem;
 }
@@ -846,20 +755,49 @@ video {
   place-self: end;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
-.rounded-full {
-  border-radius: 9999px;
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.border-4 {
+  border-width: 4px;
+}
+
+.border-customColorSection1Text3 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 20 20 / var(--tw-border-opacity));
+}
+
+.border-customColorSection2Text3 {
+  --tw-border-opacity: 1;
+  border-color: rgb(235 89 57 / var(--tw-border-opacity));
+}
+
+.border-customColorSection3Text1 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 20 20 / var(--tw-border-opacity));
+}
+
+.border-customColorSection3Text3 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 20 20 / var(--tw-border-opacity));
+}
+
+.border-customColorSection4Text3 {
+  --tw-border-opacity: 1;
+  border-color: rgb(235 89 57 / var(--tw-border-opacity));
 }
 
 .bg-\[\#242324\] {
@@ -867,73 +805,81 @@ video {
   background-color: rgb(36 35 36 / var(--tw-bg-opacity));
 }
 
-.bg-customColorBackground {
+.bg-customColorSection2b {
   --tw-bg-opacity: 1;
-  background-color: rgb(49 55 64 / var(--tw-bg-opacity));
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 
-.bg-customColorCard {
+.bg-customColorSection3Text1 {
   --tw-bg-opacity: 1;
-  background-color: rgb(41 47 56 / var(--tw-bg-opacity));
+  background-color: rgb(20 20 20 / var(--tw-bg-opacity));
 }
 
-.bg-customColorHighlightedBackground {
+.bg-customColorMenuText {
   --tw-bg-opacity: 1;
-  background-color: rgb(226 226 209 / var(--tw-bg-opacity));
+  background-color: rgb(254 246 242 / var(--tw-bg-opacity));
 }
 
-.bg-customColorTagBackground {
+.bg-customColorSection3Text2 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 182 80 / var(--tw-bg-opacity));
+  background-color: rgb(254 246 242 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.from-customColorBackground {
-  --tw-gradient-from: #313740 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(49 55 64 / 0) var(--tw-gradient-to-position);
+.bg-gradient-to-bl {
+  background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.from-customColorSection1a {
+  --tw-gradient-from: #eb5939 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(235 89 57 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-customColorBackground2 {
-  --tw-gradient-from: #2e2c2e var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(46 44 46 / 0) var(--tw-gradient-to-position);
+.from-customColorSection2a {
+  --tw-gradient-from: #141414 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 20 20 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-transparent {
-  --tw-gradient-from: transparent var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+.from-customColorSection3a {
+  --tw-gradient-from: #eb5939 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(235 89 57 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.via-customColorBackground {
-  --tw-gradient-to: rgb(49 55 64 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #313740 var(--tw-gradient-via-position), var(--tw-gradient-to);
+.from-customColorSection4a {
+  --tw-gradient-from: #141414 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 20 20 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.via-customColorBackground2 {
-  --tw-gradient-to: rgb(46 44 46 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #2e2c2e var(--tw-gradient-via-position), var(--tw-gradient-to);
+.via-customColorSection3a {
+  --tw-gradient-to: rgb(235 89 57 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #eb5939 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-.via-transparent {
-  --tw-gradient-to: rgb(0 0 0 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), transparent var(--tw-gradient-via-position), var(--tw-gradient-to);
+.to-customColorSection1b {
+  --tw-gradient-to: #d84b2c var(--tw-gradient-to-position);
 }
 
-.to-customColorBackground {
-  --tw-gradient-to: #313740 var(--tw-gradient-to-position);
+.to-customColorSection2b {
+  --tw-gradient-to: #333 var(--tw-gradient-to-position);
 }
 
-.to-customColorBackground2 {
-  --tw-gradient-to: #2e2c2e var(--tw-gradient-to-position);
+.to-customColorSection3b {
+  --tw-gradient-to: #d84b2c var(--tw-gradient-to-position);
 }
 
-.to-transparent {
-  --tw-gradient-to: transparent var(--tw-gradient-to-position);
+.to-customColorSection4b {
+  --tw-gradient-to: #333 var(--tw-gradient-to-position);
 }
 
 .object-cover {
@@ -946,42 +892,16 @@ video {
      object-position: top;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-24 {
-  padding-left: 6rem;
-  padding-right: 6rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.px-40 {
-  padding-left: 10rem;
-  padding-right: 10rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.px-60 {
-  padding-left: 15rem;
-  padding-right: 15rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .px-96 {
@@ -989,44 +909,28 @@ video {
   padding-right: 24rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
 .py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
 
-.py-96 {
-  padding-top: 24rem;
-  padding-bottom: 24rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
-.text-left {
-  text-align: left;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
-.text-center {
-  text-align: center;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.text-justify {
-  text-align: justify;
-}
-
-.font-custom1 {
-  font-family: 'Della Respira', serif;
-}
-
-.font-custom2 {
-  font-family: 'Open Sans', sans-serif;
+.font-customFont1 {
+  font-family: 'Georama', sans-serif;
 }
 
 .text-2xl {
@@ -1054,15 +958,6 @@ video {
   line-height: 1;
 }
 
-.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}
-
-.text-\[60px\] {
-  font-size: 60px;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1083,53 +978,82 @@ video {
   line-height: 1rem;
 }
 
-.text-\[6px\] {
-  font-size: 6px;
-}
-
-.text-\[8px\] {
-  font-size: 8px;
-}
-
-.font-600 {
-  font-weight: 600;
-}
-
-.font-700 {
+.font-bold {
   font-weight: 700;
 }
 
-.font-900 {
-  font-weight: 900;
-}
-
-.tracking-widest {
-  letter-spacing: 0.1em;
+.font-medium {
+  font-weight: 500;
 }
 
 .text-customColorBackground {
   --tw-text-opacity: 1;
-  color: rgb(49 55 64 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-customColorCard {
+.text-customColorMenuText {
   --tw-text-opacity: 1;
-  color: rgb(41 47 56 / var(--tw-text-opacity));
+  color: rgb(254 246 242 / var(--tw-text-opacity));
 }
 
-.text-customColorHighlighted {
+.text-customColorSection1Text1 {
   --tw-text-opacity: 1;
-  color: rgb(41 47 56 / var(--tw-text-opacity));
+  color: rgb(20 20 20 / var(--tw-text-opacity));
 }
 
-.text-customColorTagText {
+.text-customColorSection1Text2 {
   --tw-text-opacity: 1;
-  color: rgb(18 20 26 / var(--tw-text-opacity));
+  color: rgb(254 246 242 / var(--tw-text-opacity));
 }
 
-.text-customColorText {
+.text-customColorSection1Text3 {
   --tw-text-opacity: 1;
-  color: rgb(226 226 209 / var(--tw-text-opacity));
+  color: rgb(20 20 20 / var(--tw-text-opacity));
+}
+
+.text-customColorSection2Text1 {
+  --tw-text-opacity: 1;
+  color: rgb(235 89 57 / var(--tw-text-opacity));
+}
+
+.text-customColorSection2Text2 {
+  --tw-text-opacity: 1;
+  color: rgb(254 246 242 / var(--tw-text-opacity));
+}
+
+.text-customColorSection2Text3 {
+  --tw-text-opacity: 1;
+  color: rgb(235 89 57 / var(--tw-text-opacity));
+}
+
+.text-customColorSection3Text1 {
+  --tw-text-opacity: 1;
+  color: rgb(20 20 20 / var(--tw-text-opacity));
+}
+
+.text-customColorSection3Text2 {
+  --tw-text-opacity: 1;
+  color: rgb(254 246 242 / var(--tw-text-opacity));
+}
+
+.text-customColorSection3Text3 {
+  --tw-text-opacity: 1;
+  color: rgb(20 20 20 / var(--tw-text-opacity));
+}
+
+.text-customColorSection4Text1 {
+  --tw-text-opacity: 1;
+  color: rgb(235 89 57 / var(--tw-text-opacity));
+}
+
+.text-customColorSection4Text2 {
+  --tw-text-opacity: 1;
+  color: rgb(254 246 242 / var(--tw-text-opacity));
+}
+
+.text-customColorSection4Text3 {
+  --tw-text-opacity: 1;
+  color: rgb(235 89 57 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1140,6 +1064,11 @@ video {
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
+}
+
+.text-customColorMenuBackground {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .shadow-md {
@@ -1190,6 +1119,11 @@ video {
 
 *::-webkit-scrollbar-thumb:active {
   background-color: var(--scrollbar-thumb-hover-color);
+}
+
+.hover\:border-customColorSection2Text1:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(235 89 57 / var(--tw-border-opacity));
 }
 
 .hover\:text-yellow-400:hover {
