--- a/src/input.css
+++ b/src/input.css
@@ -40,3 +40,10 @@
   background-color: var(--scrollbar-thumb-hover-color);
 }
   
+progress::-webkit-progress-value {
+  background-color: #141414; /* TailwindCSS red-500 */
+}
+
+progress::-moz-progress-bar {
+  background-color: #141414; /* TailwindCSS red-500 */
+}
