--- a/src/output.css
+++ b/src/output.css
@@ -618,6 +618,10 @@ video {
   margin-left: 6rem;
 }
 
+.ml-40 {
+  margin-left: 10rem;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -628,10 +632,6 @@ video {
 
 .mt-40 {
   margin-top: 10rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
 }
 
 .block {
@@ -650,12 +650,21 @@ video {
   display: none;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-screen {
   height: 100vh;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .w-screen {
@@ -714,20 +723,12 @@ video {
   animation: menuin 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 }
 
-.cursor-cell {
-  cursor: cell;
-}
-
 .cursor-crosshair {
   cursor: crosshair;
 }
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.grid-flow-row {
-  grid-auto-flow: row;
 }
 
 .grid-cols-3 {
@@ -766,16 +767,24 @@ video {
   gap: 1rem;
 }
 
+.gap-40 {
+  gap: 10rem;
+}
+
 .gap-8 {
   gap: 2rem;
 }
 
-.gap-96 {
-  gap: 24rem;
-}
-
 .place-self-end {
   place-self: end;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-lg {
@@ -795,17 +804,7 @@ video {
   border-color: rgb(20 20 20 / var(--tw-border-opacity));
 }
 
-.border-customColorSection2Text3 {
-  --tw-border-opacity: 1;
-  border-color: rgb(235 89 57 / var(--tw-border-opacity));
-}
-
 .border-customColorSection3Text1 {
-  --tw-border-opacity: 1;
-  border-color: rgb(20 20 20 / var(--tw-border-opacity));
-}
-
-.border-customColorSection3Text3 {
   --tw-border-opacity: 1;
   border-color: rgb(20 20 20 / var(--tw-border-opacity));
 }
@@ -813,6 +812,11 @@ video {
 .border-customColorSection4Text3 {
   --tw-border-opacity: 1;
   border-color: rgb(254 246 242 / var(--tw-border-opacity));
+}
+
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
 .bg-customColorBackground {
@@ -828,11 +832,6 @@ video {
 .bg-customColorMenuBackgroundActive {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-customColorSection2a {
-  --tw-bg-opacity: 1;
-  background-color: rgb(20 20 20 / var(--tw-bg-opacity));
 }
 
 .bg-customColorSection2b {
@@ -855,8 +854,14 @@ video {
   background-color: rgb(20 20 20 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'\/src\/img\/background\/sand2\.jpg\'\)\] {
-  background-image: url('/src/img/background/sand2.jpg');
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\/src\/img\/background\/sky\.jpg\'\)\] {
@@ -867,14 +872,6 @@ video {
   background-image: url('/src/img/background/volcano.png');
 }
 
-.bg-\[url\(\'\/src\/img\/background\/volcano1\.jpg\'\)\] {
-  background-image: url('/src/img/background/volcano1.jpg');
-}
-
-.bg-\[url\(\'\/src\/img\/background\/volcano2\.jpg\'\)\] {
-  background-image: url('/src/img/background/volcano2.jpg');
-}
-
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -883,9 +880,19 @@ video {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-tr {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
 .from-customColorSection1a {
   --tw-gradient-from: #eb5939 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(235 89 57 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-customColorSection2a {
+  --tw-gradient-from: #000 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -895,20 +902,30 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-customColorSection4a {
+  --tw-gradient-from: #141414 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 20 20 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-customColorSection1b {
   --tw-gradient-to: #ff7a3d var(--tw-gradient-to-position);
+}
+
+.to-customColorSection2b {
+  --tw-gradient-to: #141414 var(--tw-gradient-to-position);
 }
 
 .to-customColorSection3b {
   --tw-gradient-to: #eb3938 var(--tw-gradient-to-position);
 }
 
-.bg-cover {
-  background-size: cover;
+.to-customColorSection4b {
+  --tw-gradient-to: #000 var(--tw-gradient-to-position);
 }
 
-.bg-fixed {
-  background-attachment: fixed;
+.bg-cover {
+  background-size: cover;
 }
 
 .bg-bottom {
@@ -978,11 +995,6 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .text-lg {
@@ -1057,11 +1069,6 @@ video {
   color: rgb(254 246 242 / var(--tw-text-opacity));
 }
 
-.text-customColorSection2Text3 {
-  --tw-text-opacity: 1;
-  color: rgb(235 89 57 / var(--tw-text-opacity));
-}
-
 .text-customColorSection3Text1 {
   --tw-text-opacity: 1;
   color: rgb(20 20 20 / var(--tw-text-opacity));
@@ -1070,11 +1077,6 @@ video {
 .text-customColorSection3Text2 {
   --tw-text-opacity: 1;
   color: rgb(254 246 242 / var(--tw-text-opacity));
-}
-
-.text-customColorSection3Text3 {
-  --tw-text-opacity: 1;
-  color: rgb(20 20 20 / var(--tw-text-opacity));
 }
 
 .text-customColorSection3a {
@@ -1189,8 +1191,8 @@ progress::-moz-progress-bar {
 }
 
 @media (min-width: 768px) {
-  .md\:mt-12 {
-    margin-top: 3rem;
+  .md\:mb-12 {
+    margin-bottom: 3rem;
   }
 
   .md\:grid-cols-4 {
@@ -1217,23 +1219,8 @@ progress::-moz-progress-bar {
     line-height: 2.25rem;
   }
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .md\:text-6xl {
     font-size: 3.75rem;
-    line-height: 1;
-  }
-
-  .md\:text-7xl {
-    font-size: 4.5rem;
     line-height: 1;
   }
 }
@@ -1243,8 +1230,8 @@ progress::-moz-progress-bar {
     display: block;
   }
 
-  .lg\:w-\[20\%\] {
-    width: 20%;
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:grid-cols-5 {
@@ -1258,6 +1245,21 @@ progress::-moz-progress-bar {
   .lg\:py-80 {
     padding-top: 20rem;
     padding-bottom: 20rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .lg\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
   }
 }
 
